k8s/config/arffornia/website/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arffornia-website
  labels:
    prod-gateway-access: "true"
