k8s/config/arffornia/website/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arffornia-website
  namespace: arffornia-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arffornia-website
  template:
    metadata:
      labels:
        app: arffornia-website
    spec:
      containers:
      - name: fpm
        image: ghcr.io/arffornia/arffornia_website:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"

      - name: nginx
        image: ghcr.io/arffornia/nginx_arffornia_website:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 80
