k8s/config/arffornia/website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arffornia-website
  namespace: arffornia-website
spec:
  selector:
    app: arffornia-website
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
