k8s/config/arffornia/website/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arffornia-website-ingress
  namespace: arffornia-website
  annotations:
    cert-manager.io/cluster-issuer: default-issuer
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: public
  rules:
  - host: arffornia.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: arffornia-website
            port:
              number: 80
  tls:
  - hosts:
      - arffornia.com
    secretName: arffornia-website-tls
